--- a/public/index.html
+++ b/public/index.html
@@ -5,44 +5,44 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="This is Pavan Bitra's Portfolio Website" />
+    <meta name="description" content="This is Anusha B A's Portfolio Website" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <meta
       name="description"
-      content="My name's Pavan Bitra. I'm a web designer and developer.
+      content="My name's Anusha B A. I'm a web designer and developer.
       I am a professional and passionate programmer in my daily life. A quick learner with a self-learning attitude. I love to learn and explore new technologies and am Passionate about Problem Solving. Love almost all the stacks of Software Engineering. My current stack includes Nodejs,  React,   Bootstrap,    Mysql,  Firebase,  etc."
     />
     <meta property="og:image" content="https://i.ibb.co/ZmdNH6x/abu-said.jpg" />
-    <meta property="og:site_name" content="Pavan Bitra's Portfolio" />
-    <meta property="og:title" content="Portfolio of Pavan Bitra" />
-    <meta property="og:url" content="https://pavankumarbitra.netlify.app/" />
+    <meta property="og:site_name" content="Anusha B A's Portfolio" />
+    <meta property="og:title" content="Portfolio of Anusha B A" />
+    <meta property="og:url" content="https://anusha-ba.netlify.app/" />
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
-      content="My name's Pavan Bitra. I'm a web designer and developer.
+      content="My name's Anusha B A. I'm a web designer and developer.
       I am a professional and passionate programmer in my daily life. A quick learner with a self-learning attitude. I love to learn and explore new technologies and am Passionate about Problem Solving. Love almost all the stacks of Software Engineering. My current stack includes Nodejs,  React,   Bootstrap,    Mysql,  Firebase,  etc."
     />
 
-    <meta itemprop="name" content="Portfolio of Pavan Bitra" />
-    <meta itemprop="url" content="https://pavankumarbitra.netlify.app/" />
+    <meta itemprop="name" content="Portfolio of Anusha B A" />
+    <meta itemprop="url" content="https://anusha-ba.netlify.app/" />
     <meta
       itemprop="description"
-      content="My name's Pavan Bitra. I'm a web designer and developer.
+      content="My name's Anusha B A. I'm a web designer and developer.
       I am a professional and passionate programmer in my daily life. A quick learner with a self-learning attitude. I love to learn and explore new technologies and am Passionate about Problem Solving. Love almost all the stacks of Software Engineering. My current stack includes Nodejs,  React,   Bootstrap,    Mysql,  Firebase,  etc."
     />
     <meta itemprop="thumbnailUrl" content="" />
 
     <meta
       name="linkedin:url"
-      content="https://www.linkedin.com/in/bitra-pavan-kumar-8ba067226/"
+      content="https://www.linkedin.com/in/anusha-ba-58710b269"
     />
-    <!-- <meta name="twitter:title" content="Pavan Bitra" />
+    <!-- <meta name="twitter:title" content="Anusha B A" />
     <meta
       name="twitter:description"
       content="Hello!
-      This is Pavan Bitra, a Software Engineer working at Teton Private Ltd, Dhaka, Bangladesh. 
+      This is Anusha B A, a Software Engineer working at Teton Private Ltd, Dhaka, Bangladesh. 
       I am a professional and passionate programmer in my daily life. A quick learner with a self-learning attitude. I love to learn and explore new technologies and am Passionate about Problem Solving. 
       
       Love almost all the stacks of Software Engineering. My current stack includes Nodejs,  React,   Bootstrap,    Mysql,  Firebase,  etc.
@@ -50,7 +50,7 @@
     />
     <meta name="twitter:card" content="summary" /> -->
 
-    <title>Portfolio of Bitra Pavan Kumar</title>
+    <title>Portfolio of Anusha B A</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
